maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:15: error: type mismatch;
 found   : Unit
 required: (Int, Int)
  while (!aBiscuit(xSortie,ySortie)) {  //On cherche la sortie !
  ^